--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -4,12 +4,4 @@
     </div>
 </div>
 
-<div class="card-columns m-5">
-    <div class="card" *ngFor="let artista of artistas">
-        <img class="card-img-top" alt="nuevoAlbum" [src]="artista.images[0].url">
-        <div class="card-body">
-            <h5 class="card-title">
-                {{artista.name}}
-            </h5>
-        </div>
-    </div>
+<app-tarjetas [items]="artistas"></app-tarjetas>
