--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -1,1 +1,48 @@
-<p>artista works!</p>
+<app-loading *ngIf="loading" class="animated fadeIn"></app-loading>
+
+<div class="row" *ngIf="!loading">
+    <div class="col-2">
+        <img [src]="artista.images | noimage" class="img-thumbnail">
+    </div>
+    <div class="col">
+        <h3>{{artista.name}}</h3>
+        <p>
+            <a [href]="artista.external_urls.spotify" target="_blank">
+                Ir a la pagina del Artista
+            </a>
+        </p>
+    </div>
+    <div class="col-4 text-rigth">
+        <button routerLink="/search" class="btn btn-outline-danger">
+            Regresar
+        </button>
+
+    </div>
+
+</div>
+
+<div class="row m-5">
+    <div class="col">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Foto</th>
+                    <th>Album</th>
+                    <th>Canción</th>
+                    <th>Vista Previa</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of topTracks">
+                    <td><img [src]="item.album.images |noimage " class="img-thumb"></td>
+                    <td>{{ item.album.name }}</td>
+                    <td>{{ item.name }}</td>
+                    <td>
+                        <iframe [src]="item.uri | domseguro" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                        <!-- <audio [src]="item.preview_url" controls></audio> -->
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
