--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,5 +3,5 @@
         <input #termino (keyup)="buscar(termino.value)" class="form-control" type="search" placeholder="Buscar Artista">
     </div>
 </div>
-
-<app-tarjetas [items]="artistas"></app-tarjetas>
+<app-loading *ngIf="loading" class="m-5"></app-loading>
+<app-tarjetas *ngIf="!loading" [items]="artistas"></app-tarjetas>
